wrap was corrected

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,8 +7,7 @@
 @import "./blocks/stars.scss";
 
 .main__catalog {
-  padding-top: 50px;
   width: $max-width-main;
   margin: auto;
-  padding: 0 50px;
+  padding: 50px 50px 0 0;
 }
